--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
     <div class="container d-flex align-items-center justify-content-between">      
       <!-- <h1 class="logo"><span>C</span>hrist<span>S</span>on</h1>       -->
      <div class="logo-container">
-      <div class="logo">
+       <img src="images/cas-logo.png" alt="logo">
+<!--       <div class="logo">
         <h1 id="first">
           C
           <span id="middle">a</span>
           <span id="last">S</span>
-        </h1>
+        </h1> -->
       </div> 
        
         
