--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container d-flex align-items-center justify-content-between">      
       <!-- <h1 class="logo"><span>C</span>hrist<span>S</span>on</h1>       -->
      <div class="logo-container">
-       <img src="images/cas-logo.png" alt="logo">
+       <img src="./images/cas-logo.png" alt="logo">
 <!--       <div class="logo">
         <h1 id="first">
           C
