--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       <!-- <h1 class="logo"><span>C</span>hrist<span>S</span>on</h1>       -->
      <div class="logo-container">
       <img src="images/cas-logo.PNG" alt="logo">
-<!--       <div class="logo">
+      <!-- <div class="logo">
         <h1 id="first">
           C
           <span id="middle">a</span>
           <span id="last">S</span>
-        </h1> -->
-      </div> 
+        </h1>
+      </div>  -->
        
         
      </div>     
