--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                         </div>                  
                     </section> 
                     <div>
-                      <a class="btn download-btn" href="./assets/docs/Christson-cv-2.pdf" target="_blank">Dowload CV</a>
+<!--                       <a class="btn download-btn" href="./assets/docs/Christson-cv-2.pdf" target="_blank">Dowload CV</a> -->
+                      <a class="btn download-btn" href="https://www.canva.com/design/DAF4HpaEFzU/view" target="_blank">Dowload CV</a>
                     </div> 
                   </div>
                 </div>
