--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                     </section> 
                     <div>
 <!--                       <a class="btn download-btn" href="./assets/docs/Christson-cv-2.pdf" target="_blank">Dowload CV</a> -->                           
-                        <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF4HpaEFzU&#x2F;view?utm_content=DAF4HpaEFzU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Christson SonoftheHighest Resume</a> by afolm1
+                      <a class="btn download-btn" href="https://www.canva.com/design/DAF4HpaEFzU/nM8eKqYn8r4PTNuvTDBv0g/view?utm_content=DAF4HpaEFzU&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">Dowload CV</a>                           
+<!--                         <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF4HpaEFzU&#x2F;view?utm_content=DAF4HpaEFzU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Christson SonoftheHighest Resume</a> by afolm1 -->
                       
                     </div> 
                   </div>
